[#162] Ensured the Asset files have the correct case of the files on creation

--- a/FatedQuest.Libraries/StandardOperations/CMakeLists.txt
+++ b/FatedQuest.Libraries/StandardOperations/CMakeLists.txt
@@ -86,8 +86,10 @@ endforeach()
 
 # Link libraries
 add_subdirectory(../Logger Logger)
+add_subdirectory(../SharedEnums SharedEnums)
 
 # Link dependencies
 target_link_libraries(StandardOperations PRIVATE
     Logger
+    SharedEnums
 )
