** Added a launcher to make regeneration a little easier **

--- a/.gitignore
+++ b/.gitignore
@@ -429,3 +429,4 @@ FodyWeavers.xsd
 !**SuperGameEngine/Engine/Structural/[Pp]ackages/*
 !**SuperGameEngine/Tools/ToolsEngine/[Pp]ackages/*
 !FatedQuestLibraries/[Bb]uild/*
+built/
