--- a/Tools/FatedLauncher/CMakeLists.txt
+++ b/Tools/FatedLauncher/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required(VERSION 3.20)
-project(FatedLauncher)
+cmake_minimum_required(VERSION 3.8)
+project(FatedSolution LANGUAGES CSharp)
 
-# Define solution-wide configurations
-set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
-
-# Add the subdirectory that contains the actual project
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+# Add subprojects
 add_subdirectory(FatedLauncher)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT FatedLauncher)
+
+set(FATEDQUEST_LIBRARIES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../FatedQuest.Libraries.CSharp)
+add_subdirectory(${FATEDQUEST_LIBRARIES_DIR}/StandardOperations StandardOperations)
