Added ability to build Tools via a script.

--- a/.gitignore
+++ b/.gitignore
@@ -417,6 +417,8 @@ FodyWeavers.xsd
 **/*.fsproj
 **/*.fsproj.user
 **/*.fsproj.filters
+**/*.lnk
+**/*.lnk*
 
 # Ignore IntelliSense and browsing database files
 **/*.VC.db
