Started Markdown Heading Parsing

--- a/FatedQuest.Libraries/Markdown/CMakeLists.txt
+++ b/FatedQuest.Libraries/Markdown/CMakeLists.txt
@@ -86,8 +86,10 @@ endforeach()
 
 # Link libraries
 add_subdirectory(../Logger Logger)
+add_subdirectory(../StandardOperations StandardOperations)
 
 # Link dependencies
 target_link_libraries(Markdown PRIVATE
     Logger
+    StandardOperations
 )
